--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,25 @@
-version: '3'
+version: "3"
 
 services:
-    test-app:
+    app:
         build: .
         ports:
-            - '3000:3000'
+            - "3000:3000"
         volumes:
             - .:/app
-            - /app/node_modules
-        command: bash -c "nodemon server.js"
+
+    mongo:
+        image: "mongo"
+        ports:
+            - '27017:27017' # configure your port
+        volumes:
+            - "mongodb:/data/db"
+
+    redis:
+        image: "redis"
+        ports:
+            - '6379:6379' # configure your port
+
+volumes:
+    mongodb:
+        driver: local
