--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "@shopline/sl-express": "^2.1.3",
-    "log4js": "^6.6.0"
+    "jest": "^28.1.2",
+    "log4js": "^6.6.0",
+    "supertest": "^6.2.4"
   }
 }
